??? ??? ?? ??:??:?? UTC 2007

        0.35 release.

        Changes

        - 'mkdir --no-respect-ignore PATH' now really skips any
          ignore directives from .mtn-ignore or Lua hooks

        New features

        - 'automate identify', an automate version of 'mtn identify'.

        Other

        - Private keys are now stored more safely, using file
          permissions.

        - You can't drop the workspace root any more.

        Internal

        - Update the internal Lua to version 5.1.2.

        - Added build files for Mac OS X.

        - Update the internal SQLite to version 3.3.17.

        - Code cleanup of app_state.



Sun Apr  1 08:23:34 UTC 2007

        0.34 release.

        The internal data format has changed with this release;
        migration is straight-forward.  To upgrade your databases,
        you must run:
               $ mtn -d mydb.mtn db migrate
        All of these operations are completely lossless, and 0.34
        remains compatible with earlier versions all the way back
        to 0.26 with regards to netsync.

        Changes

        - Text is now output at best of the environment's possibilities,
          transliterating them or substituting '?' as needed.

        - The lua hook get_author() now takes a second argument, a
          key identity, in case someone wants to create an author based
          on that and not only the branch name.

        - The command 'chkeypass' became 'passphrase'.

        - The commands 'drop', 'rename' and 'pivot_root' default to
          always perform the operation in the file system as well.
          They do not accept '--execute' any more, but will instead
          take '--bookkeep-only' in case the user only wants to affect
          bookkeeping files.

        New features

        - New hook note_mtn_startup(), which is called when monotone is
          started.

        - New Lua support function spawn_pipe(), which is used to run